--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Interactive Pricing Component solution for Frontendmentor.io Junior Challenge">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Interactive Pricing Component</title>
 </head>
@@ -13,20 +16,21 @@
 <body>
   <main>
     <div class="intro">
+      <img src="./images/pattern-circles.svg" alt="">
       <h1 class="intro__title">Simple, traffic-based pricing</h1>
-      <p class="intro__subtitle">Sign-up for our 30-day trial. No credit card required.</p>
+      <p class="intro__subtitle">Sign-up for our 30-day trial.<br>No credit card required.</p>
     </div>
 
     <form action="" class="component">
-      <label class="visually-hidden" for="pageview">Set Pageviews</label>
+      <label class="sr-only" for="pageview">Set Pageviews</label>
       <div class="component__pricing">
         <div class="component__pricing-amount">
-          <p><span id="viewcount"></span>PAGEVIEWS</p>
+          <p><span class="viewcount">100K</span> PAGEVIEWS</p>
         </div>
         <div class="component__pricing-total">
           <p>
-            $<span id="value">00.00</span>
-            <span id="text"> / month</span>
+            <span class="value">$00.00</span>
+            <span class="text"> / month</span>
           </p>
         </div>
         <div class="component__pricing-slider">
@@ -42,8 +46,8 @@
         <div class="billing__wrapper">
           <p>Yearly Billing</p>
           <p class="billing__discount">
-            <span class="value">10%</span>
-            <span class="text">discount</span>
+            <span class="value">-10%</span>
+            <span class="text sr-only">discount</span>
           </p>
         </div>
       </div>
