--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
   <footer class="attribution">
     <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
-    Coded by <a href="#">Your Name Here</a>.
+    <p>Coded by <a href="#">Hadree Mustaffa</a>.</p>
   </footer>
 </body>
 
