change input range and value, add class, add script

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
           </p>
         </div>
         <div class="component__pricing-slider">
-          <input type="range" name="pageview" id="pageview" min="0" max="100" step="25" value="50">
+          <input type="range" name="pageview" id="pageview" min="0" max="4" value="2">
         </div>
       </div>
 
       <div class="billing">
-        <p>Monthly Billing</p>
+        <p class="billing__text-monthly">Monthly Billing</p>
         <div class="billing__button-container">
           <button type="button" name="toggle"></button>
         </div>
@@ -79,6 +79,8 @@
     <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
     <p>Coded by <a href="#">Hadree Mustaffa</a>.</p>
   </footer>
+
+  <script src="index.js"></script>
 </body>
 
 </html>
