add button label and minor markup change

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         </div>
         <div class="component__pricing-total">
           <p>
-            <span class="value">$00.00</span>
+            <span class="value">$
+              <span>16.00</span>
+            </span>
             <span class="text"> / month</span>
           </p>
         </div>
@@ -41,12 +43,12 @@
       <div class="billing">
         <p class="billing__text-monthly">Monthly Billing</p>
         <div class="billing__button-container">
-          <button type="button" name="toggle"></button>
+          <button type="button" aria-label="toggle"></button>
         </div>
         <div class="billing__wrapper">
           <p>Yearly Billing</p>
           <p class="billing__discount">
-            <span class="value">-10%</span>
+            <span class="value">-25%</span>
             <span class="text sr-only">discount</span>
           </p>
         </div>
