--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@600;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Manrope:wght@600;800&display=swap" media="print"
+    onload="this.onload=null;this.removeAttribute('media');" fetchpriority="high">
+  <noscript>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Manrope:wght@600;800&display=swap">
+  </noscript>
   <link rel="stylesheet" href="style.css">
+  <link rel="preload" as="image" href="./images/pattern-circles.svg" type="image/svg">
   <title>Frontend Mentor | Interactive Pricing Component</title>
 </head>
 
