resolve unsupported type value error

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Manrope:wght@600;800&display=swap">
   </noscript>
   <link rel="stylesheet" href="style.css">
-  <link rel="preload" as="image" href="./images/pattern-circles.svg" type="image/svg">
+  <link rel="preload" as="image" href="./images/pattern-circles.svg" type="image/svg+xml">
   <title>Frontend Mentor | Interactive Pricing Component</title>
 </head>
 
