remove fetchpriority and add form action

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Manrope:wght@600;800&display=swap" media="print"
-    onload="this.onload=null;this.removeAttribute('media');" fetchpriority="high">
+    onload="this.onload=null;this.removeAttribute('media');">
   <noscript>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Manrope:wght@600;800&display=swap">
   </noscript>
@@ -26,7 +26,7 @@
       <p class="intro__subtitle">Sign-up for our 30-day trial.<br>No credit card required.</p>
     </div>
 
-    <form action="" class="component">
+    <form action="#" class="component">
       <label class="sr-only" for="pageview">Set Pageviews</label>
       <div class="component__pricing">
         <div class="component__pricing-amount">
